base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: 5stack
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: 5stack-web
                    operator: In
                    values:
                      - 'true'
      containers:
        - image: ghcr.io/5stackgg/web:latest
          name: web
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 2
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
            failureThreshold: 3
