base/web/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: 5stack
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`${WEB_DOMAIN}`)
      kind: Rule
      services:
        - name: web
          port: 3000
  tls:
    secretName: 5stack-ssl
